fixed wrap

--- a/src/ex10_html-css-fundamentals-part2/task-04.css
+++ b/src/ex10_html-css-fundamentals-part2/task-04.css
@@ -72,7 +72,7 @@ body {
 }
 
 icons__nowrap {
-	flex-wrap: no-wrap
+	flex-wrap: nowrap
 }
 
 .icons__phone:not(:hover),
